# structured_streamer

./: .gitignore  404.html  MANIFEST.in  index.html  mkdocs.yaml  pyproject.toml  readme.md  techdocs_metadata.json  test.py
.github/workflows/: build_and_publish.yaml  build_and_publish_test.yaml  docs.yaml  release.yaml  test.yaml  test_versions.yaml
benchmarks/: index.html
docs/: benchmarks.md  examples.md  getting_started.md  index.md  limitations.md  parsing_streams.md
examples/: index.html
getting_started/: index.html
limitations/: index.html
parsing_streams/: index.html
search/: search_index.json
src/struct_strm/: __init__.py  compat.py  default_structs.py  env.py  example.py  llm_clients.py  llm_wrappers.py  partial_parser.py  template.py  tree_queries.py  ui_components.py
src/struct_strm/structs/: dropdown_structs.py  form_structs.py  list_structs.py  rubric_structs.py  switch_structs.py  table_structs.py
src/struct_strm/templates/form/: form_complete.html  (+1 more)
stylesheets/: extra.css
tests/: test_example_function.py
tests/01_unit/: test_compat.py  test_json_dropdown_parser.py  test_json_form_parser.py  test_json_list_parser.py  test_json_rubric_parser.py  test_json_switch_parser.py  test_json_table_parser.py  test_list_component.py  test_tree_queries.py  test_tree_sitter_parse.py
tests/02_app/: Dockerfile  conftest.py  openai_structs.py  readme.md  server.py  test_browser.py  test_webpage.html
tests/app/: openai_structs.py  server.py  test_webpage.html
tests/benchmarks/: chart_benchmark.py  is_this_thing_on.py  list_gen_benchmark.csv  list_gen_benchmark_response_lengths.csv
tests/local/: hugging_face_example.py  requirements.txt
tests/online/: test_openai_stream.py
tests/profile/: profile_rubric.py
tests/unit/: test_json_form_parser.py  test_json_list_parser.py  test_list_component.py
(+7 files in other folders)
